--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,15 +14,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-04 Tue 09:59]
+#+CAPTION: Clock summary at [2016-10-04 Tue 10:37]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *53:01* |       |      | 100.0 |
+| *Total time*                                                                | *53:38* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 53:01   |       |      | 100.0 |
-| Active                                                                      |         | 53:01 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.7 |
+| Stories                                                                     | 53:38   |       |      | 100.0 |
+| Active                                                                      |         | 53:38 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
 | COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.7 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.6 |
@@ -31,7 +31,7 @@
 | COMPLETED Add new index to formtter container                               |         |       | 0:19 |   0.6 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   1.5 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   0.8 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   1.2 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   1.1 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   0.7 |
 | COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   2.7 |
 | COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.3 |
@@ -41,24 +41,24 @@
 | COMPLETED Investigate element annotation support                            |         |       | 2:05 |   3.9 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.1 |
 | COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.9 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   7.5 |
-| COMPLETED Remove empty context                                              |         |       | 1:09 |   2.2 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   7.0 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   7.4 |
+| COMPLETED Remove empty context                                              |         |       | 1:09 |   2.1 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   6.9 |
 | COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.5 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  13.4 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  13.2 |
 | COMPLETED Add a banner to readme                                            |         |       | 1:29 |   2.8 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.7 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.5 |
 | CANCELLED Remove formatter id                                               |         |       | 0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   6.4 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   6.3 |
 | COMPLETED Remove =original_model_name=                                      |         |       | 0:16 |   0.5 |
-| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   7.8 |
+| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   7.7 |
 | COMPLETED Remove formatter level facet folders                              |         |       | 0:06 |   0.2 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       | 0:01 |   0.0 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   5.7 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.6 |
-| STARTED Handle registration of services properly                            |         |       | 2:13 |   4.2 |
-| STARTED Expander refactor in =quilt.cpp=                                    |         |       | 2:26 |   4.6 |
-| STARTED Create the notion of a formatter alias                              |         |       | 0:40 |   1.3 |
+| STARTED Handle registration of services properly                            |         |       | 2:13 |   4.1 |
+| STARTED Create the notion of a formatter alias                              |         |       | 0:40 |   1.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -949,6 +949,42 @@ information. This is obtained in two ways:
 - using facet directives directly, if available;
 - mapping facet to canonical and using the canonical;
 
+*** COMPLETED Expander refactor in =quilt.cpp=                        :story:
+    CLOSED: [2016-10-04 Tue 10:29]
+    CLOCK: [2016-10-04 Tue 10:30]--[2016-10-04 Tue 10:37] =>  0:07
+    CLOCK: [2016-10-04 Tue 09:59]--[2016-10-04 Tue 10:29] =>  0:30
+    CLOCK: [2016-10-04 Tue 09:42]--[2016-10-04 Tue 09:58] =>  0:16
+    CLOCK: [2016-10-03 Mon 22:30]--[2016-10-03 Mon 23:06] =>  0:36
+    CLOCK: [2016-10-03 Mon 20:59]--[2016-10-03 Mon 22:29] =>  1:30
+    CLOCK: [2016-10-03 Mon 20:53]--[2016-10-03 Mon 20:57] =>  0:04
+
+We found some fundamental impedance mismatches whilst handling
+enablement, which mean we need to change the expanders once again.
+
+Tasks:
+
+- change model to map of formattable.
+- add facet configuration with enabled and directory.
+- make the expanders "model expanders" rather than formattable
+  expanders.
+- update the file path expander to also compute the facet directories;
+  for this we need to supply the path annotations. Actually we should
+  just add another expander (facet_directory_expander?).
+- update the enablement expander to also compute: a) facet enabelment
+  b) enablement by id.
+- update assistant with a "is facet xxx enabled".
+
+Merged stories:
+
+*Add facet configuration to element configuration*
+
+At present we need:
+
+- facet folder
+- enabled
+
+We need to also add a "is facet enabled" method in assistant.
+
 *** STARTED Generate formatter interfaces                              :epic:
     CLOCK: [2016-09-30 Fri 10:58]--[2016-09-30 Fri 11:17] =>  0:19
 
@@ -1132,39 +1168,6 @@ and if not, skip the type.
 
 Another way is to check if the type is generatable. If not, skip
 it. If we do it this way we need to wait for the generatable clean up.
-
-*** STARTED Expander refactor in =quilt.cpp=                          :story:
-    CLOCK: [2016-10-04 Tue 09:42]--[2016-10-04 Tue 09:58] =>  0:16
-    CLOCK: [2016-10-03 Mon 22:30]--[2016-10-03 Mon 23:06] =>  0:36
-    CLOCK: [2016-10-03 Mon 20:59]--[2016-10-03 Mon 22:29] =>  1:30
-    CLOCK: [2016-10-03 Mon 20:53]--[2016-10-03 Mon 20:57] =>  0:04
-
-We found some fundamental impedance mismatches whilst handling
-enablement, which mean we need to change the expanders once again.
-
-Tasks:
-
-- change model to map of formattable.
-- add facet configuration with enabled and directory.
-- make the expanders "model expanders" rather than formattable
-  expanders.
-- update the file path expander to also compute the facet directories;
-  for this we need to supply the path annotations. Actually we should
-  just add another expander (facet_directory_expander?).
-- update the enablement expander to also compute: a) facet enabelment
-  b) enablement by id.
-- update assistant with a "is facet xxx enabled".
-
-Merged stories:
-
-*Add facet configuration to element configuration*
-
-At present we need:
-
-- facet folder
-- enabled
-
-We need to also add a "is facet enabled" method in assistant.
 
 *** STARTED Create the notion of a formatter alias                    :story:
     CLOCK: [2016-10-03 Mon 20:39]--[2016-10-03 Mon 20:51] =>  0:12
