--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,17 +14,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-04 Tue 10:37]
+#+CAPTION: Clock summary at [2016-10-04 Tue 10:50]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *53:38* |       |      | 100.0 |
+| *Total time*                                                                | *53:51* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 53:38   |       |      | 100.0 |
-| Active                                                                      |         | 53:38 |      | 100.0 |
+| Stories                                                                     | 53:51   |       |      | 100.0 |
+| Active                                                                      |         | 53:51 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.7 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.6 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.6 |
 | COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   3.3 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.7 |
@@ -40,7 +40,7 @@
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.5 |
 | COMPLETED Investigate element annotation support                            |         |       | 2:05 |   3.9 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.1 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.9 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.8 |
 | COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   7.4 |
 | COMPLETED Remove empty context                                              |         |       | 1:09 |   2.1 |
 | COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   6.9 |
@@ -58,7 +58,7 @@
 | COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   5.7 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.6 |
 | STARTED Handle registration of services properly                            |         |       | 2:13 |   4.1 |
-| STARTED Create the notion of a formatter alias                              |         |       | 0:40 |   1.2 |
+| STARTED Create the notion of a formatter alias                              |         |       | 0:53 |   1.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1170,6 +1170,7 @@ Another way is to check if the type is generatable. If not, skip
 it. If we do it this way we need to wait for the generatable clean up.
 
 *** STARTED Create the notion of a formatter alias                    :story:
+    CLOCK: [2016-10-04 Tue 10:37]--[2016-10-04 Tue 10:50] =>  0:13
     CLOCK: [2016-10-03 Mon 20:39]--[2016-10-03 Mon 20:51] =>  0:12
     CLOCK: [2016-10-03 Mon 20:09]--[2016-10-03 Mon 20:37] =>  0:28
 
