--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,19 +14,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-05 Wed 12:15]
+#+CAPTION: Clock summary at [2016-10-05 Wed 14:52]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *61:00* |       |      | 100.0 |
+| *Total time*                                                                | *62:51* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 61:00   |       |      | 100.0 |
-| Active                                                                      |         | 61:00 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 4:50 |   7.9 |
+| Stories                                                                     | 62:51   |       |      | 100.0 |
+| Active                                                                      |         | 62:51 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 4:50 |   7.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.1 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.0 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.5 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   2.9 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   2.8 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.6 |
 | COMPLETED Add new index to formtter container                               |         |       | 0:19 |   0.5 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   1.3 |
@@ -38,29 +38,29 @@
 | COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   2.3 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   0.4 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.4 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   3.4 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   3.3 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.0 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.5 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   6.5 |
-| COMPLETED Remove empty context                                              |         |       | 1:09 |   1.9 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   6.1 |
-| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.2 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  11.6 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.4 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   6.3 |
+| COMPLETED Remove empty context                                              |         |       | 1:09 |   1.8 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   5.9 |
+| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.1 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  11.3 |
 | COMPLETED Add a banner to readme                                            |         |       | 1:29 |   2.4 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.6 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.4 |
 | CANCELLED Remove formatter id                                               |         |       | 0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   5.6 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   5.4 |
 | COMPLETED Remove =original_model_name=                                      |         |       | 0:16 |   0.4 |
-| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   6.8 |
+| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   6.6 |
 | COMPLETED Remove formatter level facet folders                              |         |       | 0:06 |   0.2 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       | 0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   5.0 |
-| COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   5.3 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   4.9 |
+| COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   5.2 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       | 0:22 |   0.6 |
-| COMPLETED Handle registration of services properly                          |         |       | 3:41 |   6.0 |
-| STARTED Add support for profiles                                            |         |       | 2:35 |   4.2 |
-| STARTED Generate formatter interfaces                                       |         |       | 0:28 |   0.8 |
+| COMPLETED Handle registration of services properly                          |         |       | 3:41 |   5.9 |
+| STARTED Add support for profiles                                            |         |       | 4:26 |   7.1 |
+| STARTED Generate formatter interfaces                                       |         |       | 0:28 |   0.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1164,6 +1164,7 @@ If we did it before the =visit= call we'd save the cost of
 dispatching.
 
 *** STARTED Add support for profiles                                  :story:
+    CLOCK: [2016-10-05 Wed 13:01]--[2016-10-05 Wed 14:52] =>  1:51
     CLOCK: [2016-10-05 Wed 11:40]--[2016-10-05 Wed 12:15] =>  0:35
     CLOCK: [2016-10-05 Wed 11:17]--[2016-10-05 Wed 11:28] =>  0:11
     CLOCK: [2016-10-05 Wed 10:10]--[2016-10-05 Wed 11:16] =>  1:06
