--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,17 +14,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-05 Wed 14:52]
+#+CAPTION: Clock summary at [2016-10-05 Wed 15:21]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *62:51* |       |      | 100.0 |
+| *Total time*                                                                | *63:19* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 62:51   |       |      | 100.0 |
-| Active                                                                      |         | 62:51 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 4:50 |   7.7 |
+| Stories                                                                     | 63:19   |       |      | 100.0 |
+| Active                                                                      |         | 63:19 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 4:50 |   7.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.0 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   3.9 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.5 |
 | COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   2.8 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.6 |
@@ -39,27 +39,27 @@
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   0.4 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.4 |
 | COMPLETED Investigate element annotation support                            |         |       | 2:05 |   3.3 |
-| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.0 |
+| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   0.9 |
 | COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.4 |
 | COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   6.3 |
 | COMPLETED Remove empty context                                              |         |       | 1:09 |   1.8 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   5.9 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   5.8 |
 | COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.1 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  11.3 |
-| COMPLETED Add a banner to readme                                            |         |       | 1:29 |   2.4 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  11.2 |
+| COMPLETED Add a banner to readme                                            |         |       | 1:29 |   2.3 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.6 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.4 |
 | CANCELLED Remove formatter id                                               |         |       | 0:04 |   0.1 |
 | COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   5.4 |
 | COMPLETED Remove =original_model_name=                                      |         |       | 0:16 |   0.4 |
-| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   6.6 |
+| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   6.5 |
 | COMPLETED Remove formatter level facet folders                              |         |       | 0:06 |   0.2 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       | 0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   4.9 |
-| COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   5.2 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   4.8 |
+| COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   5.1 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       | 0:22 |   0.6 |
-| COMPLETED Handle registration of services properly                          |         |       | 3:41 |   5.9 |
-| STARTED Add support for profiles                                            |         |       | 4:26 |   7.1 |
+| COMPLETED Handle registration of services properly                          |         |       | 3:41 |   5.8 |
+| STARTED Add support for profiles                                            |         |       | 4:54 |   7.7 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:28 |   0.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1164,6 +1164,7 @@ If we did it before the =visit= call we'd save the cost of
 dispatching.
 
 *** STARTED Add support for profiles                                  :story:
+    CLOCK: [2016-10-05 Wed 14:53]--[2016-10-05 Wed 15:21] =>  0:28
     CLOCK: [2016-10-05 Wed 13:01]--[2016-10-05 Wed 14:52] =>  1:51
     CLOCK: [2016-10-05 Wed 11:40]--[2016-10-05 Wed 12:15] =>  0:35
     CLOCK: [2016-10-05 Wed 11:17]--[2016-10-05 Wed 11:28] =>  0:11
