--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,38 +14,38 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-05 Wed 18:14]
+#+CAPTION: Clock summary at [2016-10-05 Wed 21:03]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *66:11* |       |      | 100.0 |
+| *Total time*                                                                | *66:53* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 66:11   |       |      | 100.0 |
-| Active                                                                      |         | 66:11 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 4:50 |   7.3 |
+| Stories                                                                     | 66:53   |       |      | 100.0 |
+| Active                                                                      |         | 66:53 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 5:15 |   7.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   3.8 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   3.7 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.5 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   2.7 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.6 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   2.6 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.5 |
 | COMPLETED Add new index to formtter container                               |         |       | 0:19 |   0.5 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   1.2 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   0.7 |
 | COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   0.9 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   0.6 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   2.2 |
-| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.3 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   2.2 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   2.1 |
+| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.2 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   2.1 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   0.4 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.4 |
 | COMPLETED Investigate element annotation support                            |         |       | 2:05 |   3.1 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   0.9 |
 | COMPLETED Create the formattables model                                     |         |       | 1:32 |   2.3 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   6.0 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   5.9 |
 | COMPLETED Remove empty context                                              |         |       | 1:09 |   1.7 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   5.6 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   5.5 |
 | COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.0 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  10.7 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  10.6 |
 | COMPLETED Add a banner to readme                                            |         |       | 1:29 |   2.2 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.6 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.4 |
@@ -53,13 +53,13 @@
 | COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   5.1 |
 | COMPLETED Remove =original_model_name=                                      |         |       | 0:16 |   0.4 |
 | COMPLETED Refactor code around model origination                            |         |       | 4:08 |   6.2 |
-| COMPLETED Remove formatter level facet folders                              |         |       | 0:06 |   0.2 |
+| COMPLETED Remove formatter level facet folders                              |         |       | 0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       | 0:01 |   0.0 |
 | COMPLETED Expander refactor in =quilt.cpp=                                  |         |       | 3:03 |   4.6 |
 | COMPLETED Create the notion of a formatter alias                            |         |       | 3:15 |   4.9 |
-| COMPLETED Remove enabled formatters from formatter configuration            |         |       | 0:22 |   0.6 |
-| COMPLETED Handle registration of services properly                          |         |       | 3:41 |   5.6 |
-| STARTED Add support for profiles                                            |         |       | 7:46 |  11.7 |
+| COMPLETED Remove enabled formatters from formatter configuration            |         |       | 0:22 |   0.5 |
+| COMPLETED Handle registration of services properly                          |         |       | 3:41 |   5.5 |
+| STARTED Add support for profiles                                            |         |       | 8:03 |  12.0 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:28 |   0.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1165,6 +1165,7 @@ If we did it before the =visit= call we'd save the cost of
 dispatching.
 
 *** STARTED Add support for profiles                                  :story:
+    CLOCK: [2016-10-05 Wed 20:46]--[2016-10-05 Wed 21:03] =>  0:17
     CLOCK: [2016-10-05 Wed 15:22]--[2016-10-05 Wed 18:14] =>  2:52
     CLOCK: [2016-10-05 Wed 14:53]--[2016-10-05 Wed 15:21] =>  0:28
     CLOCK: [2016-10-05 Wed 13:01]--[2016-10-05 Wed 14:52] =>  1:51
@@ -1187,27 +1188,6 @@ Tasks:
 - add meta-data to allow users to supply a profile (local or global).
 - update enablement expander to look for profiles.
 - update all facet test models to use profiles.
-
-*** Merge annotations with formattables                               :story:
-
-Originally we split annotations from formattables because we thought
-they had enough responsibilities to stand on their own as
-classes. However, its now clear that the only job of the annotations
-is to provide data for one expander. It makes a lot more sense to have
-it all in one class.
-
-Tasks:
-
-- merge path annotations with model expander
-- create separate annotations for facet directory expander
-- merge streaming annotations and helper annotations with helper
-  expander
-- merge inclusion directive annotations with inclusion expander and
-  possibly get rid of factory
-- merge aspect annotations with aspect expander
-- merge opaque annotations with opaque annotations expander and move
-  all other opaque classes into formattables
-- delete annotations namespace.
 
 *** STARTED Link profiles to stereotypes                              :story:
 
@@ -1426,6 +1406,27 @@ Further thoughts:
   instantiates stitch (probably within quilt) with the parameters and
   generates the file. Actually we probably can't have this in quilt
   because we still need formatter properties.
+
+*** Merge annotations with formattables                               :story:
+
+Originally we split annotations from formattables because we thought
+they had enough responsibilities to stand on their own as
+classes. However, its now clear that the only job of the annotations
+is to provide data for one expander. It makes a lot more sense to have
+it all in one class.
+
+Tasks:
+
+- merge path annotations with model expander
+- create separate annotations for facet directory expander
+- merge streaming annotations and helper annotations with helper
+  expander
+- merge inclusion directive annotations with inclusion expander and
+  possibly get rid of factory
+- merge aspect annotations with aspect expander
+- merge opaque annotations with opaque annotations expander and move
+  all other opaque classes into formattables
+- delete annotations namespace.
 
 *** Remove object types in yarn                                       :story:
 
